@@ -1,5 +1,8 @@
 2002-03-29  Yoann Vandoorselaere  <yoann@mandrakesoft.com>
 
+	* src/file-server.c (file_server_monitor_file): 
+	set current mtime.
+
 	* plugins/simple/simple.c (parse_impact_desc): 
 	new function, parse impact description.
 	(parse_rule): 
